--- a/js-developement/index.html
+++ b/js-developement/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="function-proto.js"></script>
+    <script src="class.js"></script>
 </body>
 </html>
